<resources>
    <string name="app_name">江苏渔政</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="city">城市:</string>
    <string name="wd">\n风向:</string>
    <string name="ws">\n风级:</string>
    <string name="time">\n发布时间:</string>


    <string name="EnterName">帐号</string>
    <string name="EnterPassWord">密码</string>
    <string name="login">登录</string>
    <string name="error_name">请检查帐号是否有误</string>
    <string name="error_password">请检查密码是否有误</string>
    <string name="error_email">请检查邮箱是否有误</string>
    <string name="login_success">登陆成功</string>
    <string name="check">请仔细检查未完成项</string>
    <string name="login_title">江苏省增殖放流划码软件</string>
    <!--主页-->
    <string name="main_title">划码工作台</string>
    <string name="main_add">新增</string>
    <string name="main_search">搜索</string>
    <string name="main_text_title0">序号</string>
    <string name="main_text_title1">流水号</string>
    <string name="main_text_title2">交货单位</string>
    <string name="main_text_title3">品种</string>
    <string name="main_text_title4">规格</string>
    <string name="main_text_title5">每条去皮</string>
    <string name="main_text_title6">件数</string>
    <string name="main_text_title7">毛重</string>

    <string name="main_text_title8">皮重</string>
    <string name="main_text_title9">净重</string>
    <string name="main_text_title10">废品</string>
    <string name="main_text_title11">废品</string>
    <string name="main_text_title12">操作</string>
    <string name="main_text_title13">单位</string>
    <string name="main_text_title17">打印</string>
    <string name="main_text_edit">修改</string>
    <string name="main_text_del">删除</string>
    <string name="main_text_title14">交货地址</string>
    <string name="main_text_title15">交货单位</string>
    <string name="main_text_title16">项目</string>
    <string name="add_text_tiao">条/公斤</string>
    <string name="add_text_tiao_brother">条/斤</string>
    <string name="add_text_gongjin">公斤</string>
    <string name="add_text_jin">斤</string>
    <string name="title_activity_print">打印</string>
    <string name="pressagainlog">再按一次退出程序</string>
</resources>
