<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorActivityBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <RelativeLayout
      android:orientation="vertical"
      android:background="@color/colorMainTitleColor"
      android:layout_width="match_parent" android:layout_height="@dimen/activity_title_height">
    <TextView
        android:text="@string/main_title"
        style="@style/TextTitleStyle"
    />
    <LinearLayout android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:layout_height="match_parent">
      <TextView
          android:text="@string/main_search"
          android:textColor="@android:color/white"
          android:drawablePadding="10dp"
          android:gravity="center"
          android:textSize="@dimen/main_title_size"
          android:onClick="searchClick"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          android:drawableLeft="@mipmap/search"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

      <View
          android:background="@android:color/white"
          android:layout_width="1dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_height="30dp"/>
      <TextView
          android:text="@string/main_add"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          android:drawablePadding="10dp"
          android:gravity="center"
          android:onClick="addClick"
          android:textSize="@dimen/main_title_size"
          android:textColor="@android:color/white"
          android:drawableLeft="@mipmap/add"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
    </LinearLayout>
  </RelativeLayout>
  <LinearLayout
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_marginTop="@dimen/activity_horizontal_margin"
      android:orientation="horizontal"
      android:background="@drawable/main_title_bg"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvTitle0"
        android:text="@string/main_text_title0"
        android:padding="0dp"
        style="@style/TextStyle"/>
    <TextView
        android:id="@+id/tvTitle1"
        android:text="@string/main_text_title1"
        style="@style/TextStyle"/>
    <TextView
        android:id="@+id/tvTitle2"
        android:text="@string/main_text_title2"
        style="@style/TextStyle"/>

    <TextView
        android:id="@+id/tvTitle3"
        android:text="@string/main_text_title5"
        style="@style/TextStyle"/>
    <TextView
        android:id="@+id/tvTitle4"
        android:text="@string/main_text_title6"
        style="@style/TextStyle"/>
    <TextView
        android:id="@+id/tvTitle5"
        android:text="@string/main_text_title7"
        style="@style/TextStyle"/>
    <TextView
        android:id="@+id/tvTitle6"
        android:text="@string/main_text_title8"
        style="@style/TextStyle"/>
    <TextView
        android:id="@+id/tvTitle7"
        android:text="@string/main_text_title9"
        style="@style/TextStyle"/>
    <TextView
        android:id="@+id/tvTitle8"
        android:text="@string/main_text_title10"
        style="@style/TextStyle"/>

    <TextView
        android:id="@+id/tvTitle9"
        android:text="@string/main_text_title12"
        style="@style/TextStyle"
    />
  </LinearLayout>
  <com.fsh.zhaolong.swiperecyclerview.SwipeRecyclerView
      android:id="@+id/swipeRecyclerView"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:background="@drawable/text_bottom_bg"
      android:layout_width="match_parent"
      android:layout_marginBottom="@dimen/activity_horizontal_margin"
      android:layout_height="match_parent"/>
</LinearLayout>