<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <RelativeLayout
      android:id="@+id/lyt_title"
      android:orientation="vertical"
      android:background="@color/colorMainTitleColor"
      android:layout_width="match_parent" android:layout_height="@dimen/activity_title_height">
    <TextView
        android:text="编辑划码单"
        android:onClick="backClick"
        style="@style/TextTitleStyle"
        android:drawableLeft="@mipmap/back"
    />

    <TextView
        android:id="@+id/tvDate"
        tools:text="2011-11-21"
        android:gravity="center"
        android:textSize="@dimen/main_title_size"
        android:textColor="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
  </RelativeLayout>
  <ScrollView
      android:layout_below="@id/lyt_title"
      android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="match_parent">

      <android.support.v7.widget.RecyclerView
          android:id="@+id/recyclerView"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          android:visibility="gone"
          android:background="@android:color/white"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <RelativeLayout
          android:id="@+id/lyt_project"

          android:background="@drawable/text_top_bg"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          android:layout_width="match_parent"
          android:layout_height="@dimen/activity_add_Item_height"
          android:layout_below="@+id/lyt_title"
      >
        <TextView
            android:text="@string/main_text_title16"
            style="@style/AddTextTitleStyle"/>
        <TextView
            android:id="@+id/tvproject"
            android:hint="请选择项目"
            style="@style/AddTextTitleStyle2"
            android:drawableRight="@mipmap/next"
        />

      </RelativeLayout>
      <RelativeLayout
          android:id="@+id/lyt_title1"
          android:onClick="unitidClick"
          android:background="@drawable/text_top_bg"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          android:layout_width="match_parent"
          android:layout_height="@dimen/activity_add_Item_height"
          android:layout_below="@+id/lyt_title"
      >
        <TextView
            android:text="@string/main_text_title15"
            style="@style/AddTextTitleStyle"/>
        <TextView
            android:id="@+id/tv1"
            android:hint="请选择交货单位"
            style="@style/AddTextTitleStyle2"
            android:drawableRight="@mipmap/next"
        />

      </RelativeLayout>

      <RelativeLayout
          android:background="@drawable/text_middle_bg"
          android:id="@+id/lyt_title2"
          android:layout_below="@id/lyt_title1"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          android:layout_width="match_parent"
          android:layout_height="@dimen/activity_add_Item_height">
        <TextView
            android:text="@string/main_text_title14"
            style="@style/AddTextTitleStyle"/>

        <EditText
            android:id="@+id/tvaddress"
            android:hint="请输入交货地址"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:gravity="center|right"
            android:layout_height="match_parent"
            android:background="@drawable/text_add_bg"
            style="@style/AddTextTitleStyle2"/>
      </RelativeLayout>
      <RelativeLayout
          android:background="@drawable/text_middle_bg"
          android:id="@+id/lyt_title3"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          android:layout_below="@id/lyt_title2"
          android:layout_width="match_parent"
          android:layout_height="@dimen/activity_add_Item_height">
        <TextView
            android:text="@string/main_text_title13"
            style="@style/AddTextTitleStyle"/>

        <TextView
            android:id="@+id/tv2"
            android:hint="公斤"
            android:drawableRight="@mipmap/next"
            style="@style/AddTextTitleStyle2"/>
      </RelativeLayout>


      <RelativeLayout
          android:background="@drawable/text_bottom_bg"
          android:id="@+id/lyt_title4"
          android:layout_width="match_parent"
          android:layout_height="@dimen/activity_add_Item_height"
          android:layout_below="@+id/lyt_title3"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
      >
        <TextView
            android:text="@string/main_text_title5"
            style="@style/AddTextTitleStyle"/>

        <EditText
            android:id="@+id/tv3"
            android:hint="请输入每条去皮"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:gravity="center|right"
            android:layout_height="match_parent"
            android:background="@drawable/text_add_bg"
            android:layout_width="500dp"
            style="@style/AddTextTitleStyle2"/>
      </RelativeLayout>
      <EditText
          android:background="@drawable/text_bottom_bg"
          android:id="@+id/etRemarks"
          android:hint="请输入备注"
          android:padding="@dimen/activity_horizontal_margin"
          android:layout_width="match_parent"
          android:layout_height="@dimen/activity_add_Item_height"
          android:layout_below="@+id/lyt_title4"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
      />


      <android.support.v7.widget.RecyclerView
          android:layout_marginBottom="@dimen/activity_horizontal_margin"
          android:id="@+id/RecyclerView"
          android:descendantFocusability="beforeDescendants"
          android:layout_below="@id/etRemarks"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
      />


      <LinearLayout
          android:gravity="center_vertical"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:background="@drawable/text_bg"
          android:layout_height="@dimen/activity_title_height">
        <TextView
            android:id="@+id/numPage"
            android:text="件数:--"
            android:layout_marginLeft="@dimen/activity_Item_margin"
            android:layout_marginRight="@dimen/activity_Item_margin"
            android:textSize="@dimen/main_text_title_size"
            android:maxLength="10"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/roughWeight"
            android:text="毛重:--"
            android:maxLength="10"
            android:layout_marginLeft="@dimen/activity_Item_margin"
            android:layout_marginRight="@dimen/activity_Item_margin"
            android:textSize="@dimen/main_text_title_size"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tareWeight"
            android:text="皮重:--"
            android:maxLength="10"
            android:layout_marginLeft="@dimen/activity_Item_margin"
            android:layout_marginRight="@dimen/activity_Item_margin"
            android:textSize="@dimen/main_text_title_size"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/netWeight"
            android:text="净重:--"
            android:maxLength="10"
            android:layout_marginLeft="@dimen/activity_Item_margin"
            android:layout_marginRight="@dimen/activity_Item_margin"
            android:textSize="@dimen/main_text_title_size"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/wasteProduct"
            android:text="废品:"
            android:layout_marginLeft="@dimen/activity_Item_margin"
            android:textSize="@dimen/main_text_title_size"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/wasteProductEt"
            android:hint="--"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:maxLength="8"
            android:background="@drawable/text_add_bg"
            android:layout_marginRight="@dimen/activity_Item_margin"
            android:textSize="@dimen/main_text_title_size"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/trueWeight"
            android:text="实重:--"
            android:maxLength="10"
            android:layout_marginLeft="@dimen/activity_Item_margin"
            android:layout_marginRight="@dimen/activity_Item_margin"
            android:textSize="@dimen/main_text_title_size"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:text="统计"
            android:visibility="gone"
            android:onClick="tongJiClick"
            android:layout_marginLeft="50dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
      </LinearLayout>
      <LinearLayout
          android:gravity="center"
          android:layout_marginTop="20dp"
          android:background="@android:color/white"
          android:layout_width="match_parent" android:layout_height="@dimen/activity_title_height">
        <TextView
            android:text="保存"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:onClick="saveClick"
            android:drawableTop="@mipmap/save"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvreset"
            android:text="重置"
            android:onClick="renSetClick"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/reset"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="保存打印"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:drawableTop="@mipmap/save_print"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</RelativeLayout>